# rust_study

./: .gitignore  README.md
rust-mongodb-crud/: Cargo.toml  Makefile  README.md  docker-compose.yml
rust-mongodb-crud/src/: db.rs  errors.rs  handlers.rs  main.rs  model.rs  response.rs  schema.rs
send-emails-smtp/: Cargo.toml  Makefile  README.md  example.env
send-emails-smtp/src/: config.rs  email.rs  main.rs
send-emails-smtp/templates/: reset_password.hbs  verification_code.hbs
