[package]
name = "rust-mongodb-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"
